// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClassAssignModalContainer actions should closeClassAssignModal 1`] = `
Object {
  "type": "app/ClassAssignModalContainer/CLOSE_CLASS_ASSIGN_MODAL",
}
`;

exports[`ClassAssignModalContainer actions should getClassesAndGroupRequest 1`] = `
Object {
  "type": "app/ClassAssignModalContainer/GET_CLASSES_AND_GROUPS_REQUEST",
}
`;

exports[`ClassAssignModalContainer actions should getClassesAndGroupRequestFailure 1`] = `
Object {
  "error": "err",
  "type": "app/ClassAssignModalContainer/GET_CLASSES_AND_GROUPS_REQUEST_FAILURE",
}
`;

exports[`ClassAssignModalContainer actions should getClassesAndGroupSuccess 1`] = `
Object {
  "classesAndGroups": Array [
    "test",
  ],
  "type": "app/ClassAssignModalContainer/GET_CLASSES_AND_GROUPS_REQUEST_SUCCESS",
}
`;

exports[`ClassAssignModalContainer actions should openClassAssignModal 1`] = `
Object {
  "type": "app/ClassAssignModalContainer/OPEN_CLASS_ASSIGN_MODAL",
}
`;

exports[`ClassAssignModalContainer actions should postAssignToClassRequest 1`] = `
Object {
  "payload": Object {
    "input": Object {
      "classes": Array [
        Object {
          "class_id": Array [],
        },
      ],
      "groups": Array [
        Object {
          "group_id": Array [],
        },
      ],
      "users": Array [
        Object {
          "user_id": Array [],
        },
      ],
    },
  },
  "type": "app/ClassAssignModalContainer/POST_ASSIGN_TO_CLASS_REQUEST",
}
`;

exports[`ClassAssignModalContainer actions should postAssignToClassRequestFailure 1`] = `
Object {
  "error": "err",
  "type": "app/ClassAssignModalContainer/POST_ASSIGN_TO_CLASS_REQUEST_FAILURE",
}
`;
